tests/errors/semantics/cannot_jmp_outside_of_condition_scope.odl
main :: () -> void  {
    if {return;} then 1;
};